# Ferramentas-tese-de-doutorado

./: .gitattributes  1 -Biblioteca Brasiliana Guita e José Mindlin - comentado.ipynb  1- Biblioteca Brasiliana Guita e José Mindlin - execução direta.py  10 - Código de Transcrição Covid (modelo 1).ipynb  10 - Código de Transcrição Covid (modelo 2).ipynb  2- Biblioteca de Obras Raras da UFRJ -  comentado.ipynb  3 - Instituto Ibero Americano de Berlim - execução direta.py  3 - Instituto Ibero Americano de Berlim - explicação.ipynb  4 - Criar pdf's pesquisáveis a partir de imagens, com duas camadas - comentado.ipynb  4 - Criar pdf's pesquisáveis a partir de imagens, com duas camadas - execução direta.py  6 - buscador, indexador e visualizações sem imagens.py  7 - Código para construção de matrizes a partir do mapeamento inicial.ipynb  8 - Classificação de conceitos com Inteligência Artificial - Open Ai.ipynb  8 - Classificação de conceitos com Inteligência Artificial - Vicuna 7b.ipynb  9 - Código para criação de mapas a partir de bases de dados.ipynb  Biblioteca de Obras Raras da UFRJ -  execução direta.py  Instituto Ibero Americano de Berlim - explicação.ipynb  README.md
arquivos/: colony_class_1.csv  (+4 more)
crono data/: .env.example  Makefile  README.md  pyproject.toml
crono data/cronodata/: __init__.py  cli.py
crono data/cronodata/collectors/: __init__.py
crono data/cronodata/dashboards/: __init__.py
crono data/cronodata/index/: __init__.py
crono data/cronodata/ingest/: __init__.py
crono data/cronodata/maps/: __init__.py
crono data/cronodata/nlp/: __init__.py
(+20 files in other folders)
